--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Jobility</title>
   </head>
   <body>
-    <div id="root" class="bg-base-200 dark:bg-base-100"></div>
+    <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
